--- a/packages/gui/src/css/style.css
+++ b/packages/gui/src/css/style.css
@@ -1,3 +1,5 @@
+@import url('multi-select.css');
+
 @media only screen and (min-width: 601px) {
   .container {
     width: 95%;
@@ -826,3 +828,15 @@ li input[type='text'] {
   left: 0;
   right: 0;
 } */
+
+.card.multiple-variants::after {
+  content: '\2022\2022\2022';
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 20px;
+  color: #fff;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 50%;
+  padding: 2px 5px;
+}
