--- a/packages/gui/src/css/style.css
+++ b/packages/gui/src/css/style.css
@@ -108,7 +108,13 @@ a {
   background: white;
 }
 .sidenav {
+  width: 250px;
   top: 66px;
+}
+.sidenav a[type='button'] {
+  padding: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 .buttons a {
   margin: 5px;
@@ -439,10 +445,6 @@ img.thumbnail {
   height: 100%;
   max-height: 20vh;
   margin: 0 auto;
-}
-
-.sidenav {
-  width: 250px;
 }
 
 ul.pagination {
