--- a/packages/gui/src/css/style.css
+++ b/packages/gui/src/css/style.css
@@ -847,3 +847,8 @@ li input[type='text'] {
   border-radius: 50%;
   padding: 2px 5px;
 }
+
+.selected-card {
+  border: 2px solid #2668a6; /* Teal border to indicate selection */
+  box-shadow: 0 4px 8px rgba(38, 115, 166, 0.5);
+}
